# ChangeLog for sys-apps/memtest86+
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/memtest86+/ChangeLog,v 1.49 2009/03/26 08:42:03 spock Exp $

  26 Mar 2009; Michał Januszewski <spock@gentoo.org>
  +files/make-memtest86+-boot-floppy, +files/make-memtest86+-boot-floppy.1,
  metadata.xml, memtest86+-2.11.ebuild:
  Add a script to install memtest86+ on floppy disks (bug #252996).

  22 Mar 2009; Michał Januszewski <spock@gentoo.org>
  memtest86+-2.01.ebuild, memtest86+-2.10.ebuild, memtest86+-2.11.ebuild:
  Remove GRUB device ID translation code (bug #260547).

  09 Feb 2009; Michał Januszewski <spock@gentoo.org>
  memtest86+-2.01.ebuild, memtest86+-2.10.ebuild, memtest86+-2.11.ebuild:
  Fix GRUB device number translation code (bug #257767).

*memtest86+-2.11 (03 Jan 2009)

  03 Jan 2009; Michał Januszewski <spock@gentoo.org>
  +files/memtest86+-2.11-hardcoded_cc.patch, +memtest86+-2.11.ebuild:
  Version bump.

*memtest86+-2.10 (27 Nov 2008)

  27 Nov 2008; Michał Januszewski <spock@gentoo.org>
  +files/memtest86+-2.10-hardcoded_cc.patch, +memtest86+-2.10.ebuild:
  Version bump.

  18 Oct 2008; Michał Januszewski <spock@gentoo.org>
  -files/memtest86+-1.50-hardened.patch,
  -files/memtest86+-1.70-hardcoded_cc.patch,
  -files/memtest86+-2.00-hardcoded_cc.patch, -memtest86+-1.65.ebuild,
  -memtest86+-1.70.ebuild, -memtest86+-2.00.ebuild:
  Remove old ebuilds.

  04 Oct 2008; Markus Meier <maekke@gentoo.org> memtest86+-2.01.ebuild:
  amd64/x86 stable, bug #239307

  28 Sep 2008; Michał Januszewski <spock@gentoo.org>
  files/memtest86+-2.01-hardcoded_cc.patch:
  Compile memtest86+ with -O1 instead of -Os (bug #217324).

  23 Aug 2008; Doug Goldstein <cardoe@gentoo.org> metadata.xml:
  add GLEP 56 USE flag desc from use.local.desc

*memtest86+-2.01 (11 Mar 2008)

  11 Mar 2008; Michał Januszewski <spock@gentoo.org>
  +files/memtest86+-2.01-hardcoded_cc.patch, +memtest86+-2.01.ebuild: