@@ -1,6 +1,6 @@
 # Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/memtest86+/Attic/memtest86+-2.11.ebuild,v 1.4 2009/03/26 08:42:03 spock Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/memtest86+/Attic/memtest86+-2.11.ebuild,v 1.5 2009/05/05 20:16:29 spock Exp $
 
 inherit mount-boot eutils
 
@@ -24,8 +24,10 @@ src_unpack() {
 	epatch "${FILESDIR}"/${PN}-2.11-hardcoded_cc.patch
 	epatch "${FILESDIR}"/${PN}-1.70-gnu_hash.patch
 
+	sed -i -e's,0x10000,0x100000,' memtest.lds
+
 	if use serial ; then
-		sed -e 's/#define SERIAL_CONSOLE_DEFAULT 0/#define SERIAL_CONSOLE_DEFAULT 1/' -i config.h
+		sed -i -e 's/#define SERIAL_CONSOLE_DEFAULT 0/#define SERIAL_CONSOLE_DEFAULT 1/' config.h
 	fi
 }
 
@@ -35,7 +37,7 @@ src_compile() {
 
 src_install() {
 	insinto /boot/memtest86plus
-	doins memtest.bin || die
+	doins memtest || die
 	dodoc README README.build-process
 
 	if use floppy ; then
@@ -53,10 +55,10 @@ pkg_postinst() {
 	einfo " - For grub: (replace '?' with correct numbers for your boot partition)"
 	einfo "    > title=Memtest86Plus"
 	einfo "    > root (hd?,?)"
-	einfo "    > kernel /boot/memtest86plus/memtest.bin"
+	einfo "    > kernel --type=netbsd /boot/memtest86plus/memtest"
 
 	einfo " - For lilo:"
-	einfo "    > image  = /boot/memtest86plus/memtest.bin"
+	einfo "    > image  = /boot/memtest86plus/memtest"
 	einfo "    > label  = Memtest86Plus"
 	einfo
 }
